--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   
   .app {
     height: 100%;
-    background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url('./images/city.jpeg');
+    background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url('./images/nature.jpg');
     background-size: cover;
     background-position: center;
     display: flex;
@@ -25,13 +25,13 @@
     flex-direction: column;
     border-radius: 25px;
     padding: 2%;
-    box-shadow: 10px 10px;
   }
   
   .heading {
     display: flex;
     align-items: center;
     height: 582px;
+    color:rgba(78, 107, 6, 0.699);
     font-family: 'League Spartan', sans-serif;
   }
   
@@ -49,11 +49,11 @@
     width: 210px;
     opacity: 1;
     background-color: #ffffff;
-    border: 1px solid rgba(22, 76, 167, 0.6);
+    border: 1px solid rgba(4, 9, 17, 0.6);
   }
     
   .button span {
-    color: #164ca7;
+    color: rgba(4, 9, 17, 0.6);
     font-size: 12px;
     font-weight: 500;
     letter-spacing: 0.7px;
