--- a/src/App.css
+++ b/src/App.css
@@ -17,9 +17,9 @@
   }
   
   .card {
-    background: whitesmoke;
+    background: rgb(220, 173, 150);
     width: 40%;
-    height: 20%;
+    height: 30%;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -31,7 +31,7 @@
     display: flex;
     align-items: center;
     height: 582px;
-    color:rgba(78, 107, 6, 0.699);
+    color:rgba(0, 0, 0, 0.699);
     font-family: 'League Spartan', sans-serif;
   }
   
@@ -39,23 +39,23 @@
     position: relative;
     outline: none;
     text-decoration: none;
-    border-radius: 50px;
+    border-radius: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
     text-transform: uppercase;
-    height: 200px;
-    width: 210px;
+    height: 180px;
+    width: 150px;
     opacity: 1;
-    background-color: #ffffff;
-    border: 1px solid rgba(4, 9, 17, 0.6);
+    background-color: #ffffff00;
+    border: 1px solid rgba(0, 0, 0, 0.699);
   }
     
   .button span {
-    color: rgba(4, 9, 17, 0.6);
+    color: rgba(0, 0, 0, 0.699);;
     font-size: 12px;
-    font-weight: 500;
+    font-weight: 700;
     letter-spacing: 0.7px;
   }
     
